@@ -1,0 +1,81 @@
+/*
+	(c) 2005: Jelmer Vernooij <jelmer@samba.org>
+
+	This program is free software; you can redistribute it and/or modify
+	it under the terms of the GNU General Public License as published by
+	the Free Software Foundation; either version 2 of the License, or
+	(at your option) any later version.
+
+	This program is distributed in the hope that it will be useful,
+	but WITHOUT ANY WARRANTY; without even the implied warranty of
+	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+	GNU General Public License for more details.
+
+	You should have received a copy of the GNU General Public License
+	along with this program; if not, write to the Free Software
+	Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
+*/
+
+#include <stdio.h>
+#include <errno.h>
+#include <popt.h>
+#include "dlinklist.h"
+
+#ifdef HAVE_CONFIG_H
+#  include "config.h"
+#endif
+
+#ifdef HAVE_STDINT_H
+#  include <stdint.h>
+#endif
+
+#include "ptb.h"
+
+int main(int argc, const char **argv) 
+{
+	struct ptb_tuning_dict *ret;
+	int i;
+	int c;
+	int version = 0;
+	poptContext pc;
+	struct poptOption options[] = {
+		POPT_AUTOHELP
+		{"version", 'v', POPT_ARG_NONE, &version, 'v', "Show version information" },
+		POPT_TABLEEND
+	};
+
+	pc = poptGetContext(argv[0], argc, argv, options, 0);
+	poptSetOtherOptionHelp(pc, "file.ptb");
+	while((c = poptGetNextOpt(pc)) >= 0) {
+		switch(c) {
+		case 'v':
+			printf("ptbdict Version "PACKAGE_VERSION"\n");
+			printf("(C) 2005 Jelmer Vernooij <jelmer@samba.org>\n");
+			exit(0);
+			break;
+		}
+	}
+			
+	if(!poptPeekArg(pc)) {
+		poptPrintUsage(pc, stderr, 0);
+		return -1;
+	}
+
+	ret = ptb_read_tuning_dict(poptGetArg(pc));
+	
+	if(!ret) {
+		perror("Read error: ");
+		return -1;
+	} 
+
+	for (i = 0; i < ret->nr_tunings; i++) {
+		int j;
+		printf("%s: ", ret->tunings[i].name);
+		for (j = 0; j < ret->tunings[i].nr_strings; j++) {
+			printf("%d ", ret->tunings[i].strings[j]);
+		}
+		printf("\n");
+	}
+
+	return 0;
+}
